--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
  <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Amin Jams</title>
-        <meta name="description" content="Hi! I'm Amin Jams, a coder, blogger, and hiker.">
+        <title>Amin Jamali</title>
+        <meta name="description" content="Hi! I'm Amin Jamali, a coder, blogger, and hiker.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet'
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header>
-            <h1 id="me">Hi! I'm Amin Jams, a coder, blogger, and hiker living life in New York City.</h1>
+            <h1 id="me">Hi! I'm Amin Jamali, a coder, blogger, and hiker living life in New York City.</h1>
 				<nav>
         <ul class="nav">
             <li> <a href="http://blog.aminjam.com">Blog</a>
